k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubesat-dev
  labels:
    app.kubernetes.io/part-of: kubesat
